# terminal-info

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: core.md  docs.md  maintenance.md  plugin.md
.github/workflows/: plugin-validator.yml  post-release-verification.yml  pr-checks.yml  release.yml
.tcache/: plugins.json
.tdiagplugins/: tinfo-news
.tmenu/.tw/: config.json
.tmphome/.tw/: config.json
.tplugins/: tinfo-news
crates/tinfo-plugin/: Cargo.toml
crates/tinfo-plugin/src/: command.rs  config.rs  context.rs  error.rs  lib.rs  manifest.rs  output.rs  testing.rs  widget.rs
demos/vhs/: core-demo.tape
docs/: api.md  architecture.md  chat.md  commands.md  completions.md  config.md  dashboard.md  diagnostic.md  plugin-development.md  plugin-index.md  plugin-registry.md  plugin-review.md  plugin-security.md  plugin-signing.md  plugin-spec.md  plugins.md  productivity.md  roadmap.md  sdk.md  security.md  server-mode.md  widgets.md
examples/plugins/daily-brief/: Cargo.toml  README.md  plugin.toml
examples/plugins/daily-brief/src/: main.rs
examples/plugins/daily-brief/tests/: smoke.rs
examples/plugins/docker-status/: Cargo.toml  README.md  plugin.toml
examples/plugins/docker-status/src/: main.rs
examples/plugins/git-summary/: Cargo.toml  README.md  plugin.toml
examples/plugins/git-summary/.github/workflows/: release.yml
examples/plugins/git-summary/src/: main.rs
examples/plugins/remote-health/: Cargo.toml  README.md  plugin.toml
examples/plugins/remote-health/src/: main.rs
examples/plugins/remote-health/tests/: smoke.rs
keys/: minisign.pub
plugins/: index.json  news.json
scripts/: validate_plugins.py
src/: builtins.rs  cache.rs  config.rs  config_menu.rs  dashboard.rs  disk.rs  hardware.rs  lib.rs  live.rs  main.rs  migration.rs  output.rs  plugin.rs  process_inspect.rs  productivity.rs  search.rs  speedtest.rs  storage.rs  theme.rs  weather.rs
src/ai/: adapters.rs  agent.rs  api.rs  app.rs  chat.rs  cli_chat.rs  config.rs  connections.rs  context.rs  discovery.rs  hook.rs  input.rs  ipc.rs  mod.rs  runtime.rs  secret.rs  storage.rs  ui.rs  web.rs
website/: index.html  script.js  style.css
website/policies/: index.html
website/policies/cli/: index.html
website/policies/website/: index.html
