[package]
name = "tinfo"
version = "0.6.9"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.28"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minisign-verify = "0.2"
sha2 = "0.10"
sysinfo = "0.33"
toml = "0.8"
flate2 = "1.1"
tar = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
