[package]
name = "terminal-info"
version = "1.4.1"
edition = "2024"

description = "An extensible terminal information CLI and developer toolbox"
license = "Apache-2.0"
repository = "https://github.com/T-1234567890/terminal-info"
homepage = "https://github.com/T-1234567890/terminal-info"
documentation = "https://github.com/T-1234567890/terminal-info/tree/main/docs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal", "system-info", "toolbox", "plugins"]

exclude = [
".github/",
".tcache/",
".tconf/",
".tdash/",
".tdiagplugins/",
".tmenu/",
".tmphome/",
".tmphome2/",
".tmptest-empty/",
".tmptest-live/",
".tplugins/",
"demos/",
"docs/",
"examples/",
"plugins/",
"scripts/",
"target/"
]

[[bin]]
name = "tinfo"
path = "src/main.rs"

[workspace]
members = ["crates/tinfo-plugin"]
resolver = "2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.28"
dialoguer = "0.11"
dirs = "6"
keyring = "3.6"
portable-pty = "0.8"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
minisign-verify = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
sysinfo = "0.33"
toml = "0.8"
flate2 = "1.1"
tar = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
